# gmailnotifier

./: .gitignore  CMakeLists.txt  Makefile  gmail_new_mails.c  gmailnotifier.c  gmailxml.c  gmailxml.h
